--- a/build.gradle
+++ b/build.gradle
@@ -27,7 +27,9 @@ dependencies {
 	implementation 'org.projectlombok:lombok:1.18.20'
 	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity5:3.0.4.RELEASE'
 	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
+	implementation 'org.json:json:20220924'
 	implementation 'com.fasterxml.jackson.core:jackson-databind:2.14.0-rc3'
+	implementation 'org.springdoc:springdoc-openapi-ui:1.6.14'
 	compileOnly 'org.projectlombok:lombok'
 	testCompileOnly 'org.projectlombok:lombok:1.18.24'
 	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
@@ -38,7 +40,6 @@ dependencies {
 	testAnnotationProcessor 'org.projectlombok:lombok:1.18.24'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	implementation group: 'org.jsoup', name: 'jsoup', version: '1.15.1'
-	implementation 'org.springdoc:springdoc-openapi-ui:1.6.11'
 }
 
 tasks.named('test') {
